--- a/app_client/index.html
+++ b/app_client/index.html
@@ -17,6 +17,7 @@
     <script src="/home/home.controller.js"></script>
     <script src="/login/login.controller.js"></script>
     <script src="/common/services/astir-data.service.js"></script>
+    <script src="/common/services/authentication.service.js"></script>
     <script src="/common/directives/navigation/navigation.directive.js"></script>
     <script src="/common/directives/navigation/navigation.controller.js"></script>
   </body>
