Add user name in navigation bar when logged in.

--- a/app_client/common/directives/navigation/navigation.view.html
+++ b/app_client/common/directives/navigation/navigation.view.html
@@ -5,8 +5,12 @@
             <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
                 <span class="sr-only">Toggle navigation</span> Menu <i class="fa fa-bars"></i>
             </button>
-            <a class="navbar-brand page-scroll" href="#page-top">{{navvm.pageHeader.title}} -
+            <a class="navbar-brand page-scroll"
+            href="#page-top" ng-hide="navvm.isLoggedIn">
+            {{navvm.pageHeader.title}} -
             <span>{{navvm.pageHeader.subtitle}}</span></a>
+            <a class="navbar-brand page-scroll"
+            href="#page-top" ng-show="navvm.isLoggedIn">Bienvenido, {{navvm.currentUser.name}}</a>
         </div>
 
         <!-- Collect the nav links, forms, and other content for toggling -->
