Add dashboard navigation. Begin working on calendar modal for /dashboard/events/add-new form.

--- a/app_client/common/directives/navigation/navigation.view.html
+++ b/app_client/common/directives/navigation/navigation.view.html
@@ -16,18 +16,15 @@
         <!-- Collect the nav links, forms, and other content for toggling -->
         <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
             <ul class="nav navbar-nav navbar-right">
-                <li>
-                  <a class="page-scroll" href="#download">Descargar</a>
-                </li>
-                <li>
-                  <a class="page-scroll" href="#features">Características</a>
-                </li>
-                <li ng-hide="navvm.isLoggedIn">
-                  <a href="/#/login">Acceder</a>
-                </li>
-                <li ng-show="navvm.isLoggedIn">
-                  <a href="" ng-click="navvm.logout()">Salir</a>
-                </li>
+              <li ng-show="navvm.isLoggedIn">
+                <a href="/#/dashboard/events">Panel de control</a>
+              </li>
+              <li ng-hide="navvm.isLoggedIn">
+                <a href="/#/login">Acceder</a>
+              </li>
+              <li ng-show="navvm.isLoggedIn">
+                <a href="" ng-click="navvm.logout()">Salir</a>
+              </li>
             </ul>
         </div>
         <!-- /.navbar-collapse -->
