--- a/app_client/index.html
+++ b/app_client/index.html
@@ -13,6 +13,11 @@
     <script src="/angular/angular.min.js"></script>
     <script src="/lib/angular-route.min.js"></script>
     <script src="/lib/angular-animate.min.js"></script>
+    <script src="/lib/moment/moment.min.js"></script>
+    <script src="/lib/moment/locales/es.js"></script>
+    <script src="/lib/angular-moment.min.js"></script>
+    <script src="/lib/ui-bootstrap/ui-bootstrap-custom-2.2.0.min.js"></script>
+    <script src="/lib/ui-bootstrap/ui-bootstrap-custom-tpls-2.2.0.min.js"></script>
     <script src="/app.js"></script>
     <script src="/home/home.controller.js"></script>
     <script src="/login/login.controller.js"></script>
@@ -20,5 +25,9 @@
     <script src="/common/services/authentication.service.js"></script>
     <script src="/common/directives/navigation/navigation.directive.js"></script>
     <script src="/common/directives/navigation/navigation.controller.js"></script>
+    <script src="/common/directives/dashboard-navigation/dashboard-navigation.directive.js"></script>
+    <script src="/common/directives/dashboard-navigation/dashboard-navigation.controller.js"></script>
+    <script src="/dashboard/events-add/events-add.controller.js"></script>
+    <script src="/common/calendar-modal/calendar-modal.controller.js"></script>
   </body>
 </html>
