--- a/app_client/index.html
+++ b/app_client/index.html
@@ -28,6 +28,7 @@
     <script src="/common/directives/dashboard-navigation/dashboard-navigation.directive.js"></script>
     <script src="/common/directives/dashboard-navigation/dashboard-navigation.controller.js"></script>
     <script src="/dashboard/events-add/events-add.controller.js"></script>
+    <script src="/dashboard/events-list/events-list.controller.js"></script>
     <script src="/common/calendar-modal/calendar-modal.controller.js"></script>
   </body>
 </html>
