--- a/app_client/dashboard/events-add/events-add.view.html
+++ b/app_client/dashboard/events-add/events-add.view.html
@@ -1,12 +1,13 @@
 <div class="container app-container">
   <h1>Añadir un nuevo evento</h1>
   <dashboard-navigation></dashboard-navigation>
+  <div role="alert" ng-show="vm.formError" class="alert alert-danger">{{ vm.formError }}</div>
   <h3>Ingrese datos del evento</h3>
   <form class="form-horizontal" ng-submit="vm.onSubmit()">
    <div class="form-group">
-     <label class="control-label col-sm-2" for="name">Título del Evento:</label>
+     <label class="control-label col-sm-2" for="title">Título del Evento:</label>
      <div class="col-sm-10">
-       <input type="name" class="form-control" id="name" placeholder="Ingrese el título del evento" ng-model="vm.newEvent.name">
+       <input type="name" class="form-control" id="title" placeholder="Ingrese el título del evento" ng-model="vm.newEvent.title">
      </div>
    </div>
    <div class="form-group">
@@ -51,6 +52,26 @@
      <label class="control-label col-sm-2" for="name">Dirección del Evento:</label>
      <div class="col-sm-10">
        <input type="name" class="form-control" id="name" placeholder="Ingrese la ubicación del evento" ng-model="vm.newEvent.where ">
+     </div>
+   </div>
+   <div class="form-group">
+     <label class="control-label col-sm-2" for="cost-text">Costo del evento:</label>
+     <div class="col-sm-2">
+       <input type="text" class="form-control" id="cost-text" placeholder="Texto" ng-model="vm.newCost.text">
+     </div>
+     <div class="col-sm-2">
+       <input type="number" class="form-control" id="cost-value" placeholder="Texto" ng-model="vm.newCost.value">
+     </div>
+     <div class="col-sm-2">
+       <button class="btn btn-default" ng-click="vm.addCost()" type="button">+</button>
+     </div>
+     <div class="col-sm-4">
+       <div ng-hide="vm.newEvent.cost">
+         Entrada Liberada
+       </div>
+       <ul ng-show="vm.newEvent.cost" class="cost-list">
+         <li ng-repeat="cost in vm.newEvent.cost">{{cost.text}}: ${{cost.value}} <button class="btn btn-default" ng-click="vm.removeCost(cost)" type="button">-</button></li>
+       </ul>
      </div>
    </div>
    <div class="form-group">
