--- a/app_client/dashboard/events-list/events-list.view.html
+++ b/app_client/dashboard/events-list/events-list.view.html
@@ -2,22 +2,29 @@
   <h1>Lista de eventos</h1>
   <dashboard-navigation></dashboard-navigation>
   <div role="alert" ng-show="vm.formError" class="alert alert-danger">{{ vm.formError }}</div>
-  <table class="table table-striped table-bordered">
+  <table class="table table-striped table-bordered events-list-table">
   <caption>Lista con todos los eventos registrados</caption>
   <thead>
     <tr>
       <th>Título</th>
       <th>Categoría</th>
       <th>Descripción</th>
-      <th>Opciones</th>
+      <th>Fecha</th>
+      <th colspan="2">Opciones</th>
     </tr>
   </thead>
   <tbody>
     <tr ng-repeat="event in vm.events">
-      <td>{{event.title}}</td>
-      <td>{{event.category}}</td>
+      <td class="col-md-2">{{event.title}}</td>
+      <td class="col-md-1">{{event.category}}</td>
       <td>{{event.description}}</td>
-      <td>Un botón para editar</td>
+      <td class="col-md-2">{{event.when.start}}</td>
+      <td class="col-md-1">
+        <button type="button" class="btn btn-default">Editar</button>
+      </td>
+      <td class="col-md-1">
+        <button type="button" class="btn btn-danger" ng-click="vm.deleteEvent(event)">Borrar</button>
+      </td>
     </tr>
   </tbody>
   </table>
