--- a/app_client/dashboard/events-list/events-list.view.html
+++ b/app_client/dashboard/events-list/events-list.view.html
@@ -23,7 +23,7 @@
         <button type="button" class="btn btn-default">Editar</button>
       </td>
       <td class="col-md-1">
-        <button type="button" class="btn btn-danger" ng-click="vm.deleteEvent(event)">Borrar</button>
+        <button type="button" class="btn btn-danger" ng-click="vm.deleteEvent(event)">Eliminar</button>
       </td>
     </tr>
   </tbody>
