--- a/app_client/index.html
+++ b/app_client/index.html
@@ -6,6 +6,7 @@
     <link rel="stylesheet" type="text/css" href="stylesheets/paper.bootstrap.min.css">
     <link rel="stylesheet" type="text/css" href="stylesheets/styles.css">
     <link rel="stylesheet" type="text/css" href="lib/animate.css">
+    <link rel="stylesheet" href="http://cdn.leafletjs.com/leaflet-0.7.1/leaflet.css">
   </head>
   <body>
     <navigation></navigation>
@@ -30,5 +31,8 @@
     <script src="/dashboard/events-add/events-add.controller.js"></script>
     <script src="/dashboard/events-list/events-list.controller.js"></script>
     <script src="/common/calendar-modal/calendar-modal.controller.js"></script>
+
+    <script src="http://cdn.leafletjs.com/leaflet-0.7.1/leaflet.js"></script>
+    <script src="/lib/angular-leaflet-directive.min.js"></script>
   </body>
 </html>
