--- a/app_client/index.html
+++ b/app_client/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Astir Web</title>
-    <link rel="stylesheet" type="text/css" href="stylesheets/paper.bootstrap.min.css">
+    <link rel="stylesheet" type="text/css" href="stylesheets/lumen.bootstrap.min.css">
     <link rel="stylesheet" type="text/css" href="stylesheets/styles.css">
     <link rel="stylesheet" type="text/css" href="lib/animate.css">
     <link rel="stylesheet" href="http://cdn.leafletjs.com/leaflet-0.7.1/leaflet.css">
