Redesign input form for creating events.

--- a/app_client/common/directives/dashboard-navigation/dashboard-navigation.view.html
+++ b/app_client/common/directives/dashboard-navigation/dashboard-navigation.view.html
@@ -10,5 +10,10 @@
         Añadir nuevo Evento
       </a>
     </li>
+    <li role="presentation" ng-class="{ active: navvm.isActive('/dashboard/events/add')}">
+      <a href="/#dashboard/events/add" aria-controls="profile" role="tab" data-toggle="tab">
+        AÑADIR
+      </a>
+    </li>
   </ul>
 </div>
