--- a/app_client/index.html
+++ b/app_client/index.html
@@ -12,6 +12,7 @@
     <navigation></navigation>
     <div class="container-fluid view" ng-view></div>
     <script src="/angular/angular.min.js"></script>
+    <script src="http://code.angularjs.org/1.5.8/i18n/angular-locale_es-cl.js"></script>
     <script src="/lib/angular-route.min.js"></script>
     <script src="/lib/angular-animate.min.js"></script>
     <script src="/lib/moment/moment.min.js"></script>
@@ -21,7 +22,7 @@
     <script src="/lib/ui-bootstrap/ui-bootstrap-custom-tpls-2.5.0.min.js"></script>
     <!-- Bibliotecas necesarias para Integrar con Google Maps -->
     <script src="/lib/lodash.js"></script>
-    <script src='//maps.googleapis.com/maps/api/js?key=AIzaSyA1NLiriGyQz7tgpRlWnbVvuW4xxbT8JR0'></script>
+    <!--<script src='//maps.googleapis.com/maps/api/js?key=AIzaSyA1NLiriGyQz7tgpRlWnbVvuW4xxbT8JR0'></script>-->
     <script src="/lib/angular-google-maps.js"></script>
     <script src="/lib/angular-simple-logger.js"></script>
 
