--- a/app_client/dashboard/events-add2/events-add2.view.html
+++ b/app_client/dashboard/events-add2/events-add2.view.html
@@ -26,6 +26,32 @@
       </div>
     </div>
 
+    <h4>(Opcional) Imagen para el evento</h4>
+    <div class="form-group">
+      <label class="control-label col-sm-2" for="banner">Imagen original:</label>
+      <div class="col-sm-10">
+        <input type="file" id="fileInput" />
+        <div style="height:480px;">
+          <ui-cropper
+            image="vm.cropper.sourceImage"
+            result-image="vm.cropper.croppedImage"
+            area-type="rectangle"
+            aspect-ratio="2.3"
+            result-image-size='{w: 350,h: 150}'>
+          </ui-cropper>
+        </div>
+      </div>
+    </div>
+    <div class="form-group" ng-show="vm.cropper.croppedImage!=null">
+      <div class="form-group">
+        <label class="control-label col-sm-2" for="banner">Imagen resultante:</label>
+        <div class="col-sm-10">
+          <img ng-src="{{vm.cropper.croppedImage}}" />
+          <button class="btn btn-danger" ng-click="vm.uploadBanner()">Subir</button>
+          {{ vm.progress }}
+        </div>
+      </div>
+    </div>
     <h4>2. Fecha y duración</h4>
     <div class="form-group">
       <label class="control-label col-sm-2" for="name">Fecha de Inicio:</label>
@@ -168,7 +194,7 @@
 
     <h4>5. Confirmación</h4>
     <div class="form-group">
-      <div class="col-sm-offset-2 col-sm-10">        
+      <div class="col-sm-offset-2 col-sm-10">
         <div role="alert" ng-show="vm.formError" class="alert alert-danger">{{ vm.formError }}</div>
         <button type="submit" class="btn btn-default">Registrar Evento</button>
       </div>
