--- a/app_client/index.html
+++ b/app_client/index.html
@@ -6,6 +6,7 @@
     <link rel="stylesheet" type="text/css" href="stylesheets/lumen.bootstrap.min.css">
     <link rel="stylesheet" type="text/css" href="stylesheets/styles.css">
     <link rel="stylesheet" type="text/css" href="lib/animate.css">
+    <link rel="stylesheet" type="text/css" href="lib/ui-cropper/ui-cropper.css">
     <!--<link rel="stylesheet" href="http://cdn.leafletjs.com/leaflet-0.7.1/leaflet.css">-->
   </head>
   <body>
@@ -18,6 +19,9 @@
     <script src="/lib/moment/moment.min.js"></script>
     <script src="/lib/moment/locales/es.js"></script>
     <script src="/lib/angular-moment.min.js"></script>
+    <script src="/lib/ui-cropper/ui-cropper.js"></script>
+    <script src="/lib/ng-file-upload/ng-file-upload-shim.min.js"></script>
+    <script src="/lib/ng-file-upload/ng-file-upload.min.js"></script>
     <script src="/lib/ui-bootstrap/ui-bootstrap-custom-2.5.0.min.js"></script>
     <script src="/lib/ui-bootstrap/ui-bootstrap-custom-tpls-2.5.0.min.js"></script>
     <!-- Bibliotecas necesarias para Integrar con Google Maps -->
