Refactor some code for prettyness.

--- a/app_client/common/directives/dashboard-navigation/dashboard-navigation.view.html
+++ b/app_client/common/directives/dashboard-navigation/dashboard-navigation.view.html
@@ -5,14 +5,9 @@
         Lista de Eventos
       </a>
     </li>
-    <li role="presentation" ng-class="{ active: navvm.isActive('/dashboard/events/add-new')}">
-      <a href="/#dashboard/events/add-new" aria-controls="profile" role="tab" data-toggle="tab">
-        Añadir nuevo Evento
-      </a>
-    </li>
     <li role="presentation" ng-class="{ active: navvm.isActive('/dashboard/events/add')}">
-      <a href="/#dashboard/events/add" aria-controls="profile" role="tab" data-toggle="tab">
-        AÑADIR
+      <a href="/#dashboard/events/add" aria-controls="addevent" role="tab" data-toggle="tab">
+        Añadir nuevo evento
       </a>
     </li>
   </ul>
