--- a/app_client/dashboard/events-add/events-add.view.html
+++ b/app_client/dashboard/events-add/events-add.view.html
@@ -1,149 +1,203 @@
 <div class="container app-container">
   <h1>Añadir un nuevo evento</h1>
   <dashboard-navigation></dashboard-navigation>
-  <div role="alert" ng-show="vm.formError" class="alert alert-danger">{{ vm.formError }}</div>
   <h3>Ingrese datos del evento</h3>
   <form class="form-horizontal" ng-submit="vm.onSubmit()">
-    <div class="form-group page-list">
-      <div class="btn-group btn-group-justified">
-        <a ng-repeat="page in vm.formPages" ng-click="vm.selectPage(page.value)" class="btn btn-default">
-          {{page.value}}. {{ page.name }}
-        </a>
+
+    <h4>1. Datos generales</h4>
+    <div class="form-group">
+      <label class="control-label col-sm-2" for="title">Título del Evento:</label>
+      <div class="col-sm-10">
+        <input type="name" class="form-control" id="title" placeholder="Ingrese el título del evento" ng-model="vm.newEvent.title">
       </div>
     </div>
-    <div class="form-page panel panel-default" ng-show="vm.formPageSelected==1">
-      <div class="form-group">
-        <label class="control-label col-sm-2" for="title">Título del Evento:</label>
-        <div class="col-sm-10">
-          <input type="name" class="form-control" id="title" placeholder="Ingrese el título del evento" ng-model="vm.newEvent.title">
-        </div>
+    <div class="form-group">
+      <label class="control-label col-sm-2" for="name">Categoría:</label>
+      <div class="col-sm-10">
+        <select class="form-control" id="category" ng-model="vm.newEvent.category">
+          <option ng-repeat="cat in vm.categories" value="{{cat.value}}">{{cat.name}}</option>
+        </select>
       </div>
-      <div class="form-group">
-        <label class="control-label col-sm-2" for="name">Categoría:</label>
-        <div class="col-sm-10">
-          <select class="form-control" id="category" ng-model="vm.newEvent.category">
-            <option ng-repeat="cat in vm.categories" value="{{cat.value}}">{{cat.name}}</option>
-          </select>
-        </div>
-      </div>
-      <div class="form-group">
-        <label class="control-label col-sm-2" for="name">Descripción:</label>
-        <div class="col-sm-10">
-          <textarea class="form-control" rows="5" placeholder="Ingrese una descripción del evento" ng-model="vm.newEvent.description"></textarea>
-        </div>
+    </div>
+    <div class="form-group">
+      <label class="control-label col-sm-2" for="name">Descripción:</label>
+      <div class="col-sm-10">
+        <textarea class="form-control" rows="5" placeholder="Ingrese una descripción del evento" ng-model="vm.newEvent.description"></textarea>
       </div>
     </div>
 
-    <div class="form-page panel panel-default" ng-show="vm.formPageSelected==2">
+    <h4>(Opcional) Imagen para el evento</h4>
+    <div class="form-group">
+      <label class="control-label col-sm-2" for="banner">Imagen original:</label>
+      <div class="col-sm-10">
+        <input type="file" id="fileInput" />
+        <div style="height:480px;" ng-show="vm.cropper.sourceImage!=null">
+          <ui-cropper
+            image="vm.cropper.sourceImage"
+            result-image="vm.cropper.croppedImage"
+            area-type="rectangle"
+            aspect-ratio="2.3"
+            result-image-size='{w: 350,h: 150}'>
+          </ui-cropper>
+        </div>
+      </div>
+    </div>
+    <div class="form-group" ng-show="vm.cropper.croppedImage!=null">
       <div class="form-group">
-        <label class="control-label col-sm-2" for="name">Fecha de Inicio:</label>
-        <div class="col-sm-5">
-          <div class="input-group">
-            <input type="text" class="form-control" value="{{ vm.newEvent.when.start | amDateFormat:'dddd DD [de] MMMM YYYY, h:mm:ss a'}}">
-            <span class="input-group-btn">
-              <button class="btn btn-default" ng-click="vm.openCalendar()" type="button">Editar</button>
-            </span>
+        <label class="control-label col-sm-2" for="banner">Imagen resultante:</label>
+        <div class="col-sm-10">
+          <img ng-src="{{vm.cropper.croppedImage}}" /> <br/><br/>
+          <button class="btn btn-danger" ng-click="vm.removeImage()">Remover imagen</button>
+        </div>
+      </div>
+    </div>
+    <h4>2. Fecha y duración</h4>
+    <div class="form-group">
+      <label class="control-label col-sm-2" for="name">Fecha de Inicio:</label>
+      <div class="col-sm-4">
+        <div class="input-group">
+          <input type="text"
+            class="form-control"
+            uib-datepicker-popup="{{vm.calendarFormat}}"
+            ng-model="vm.eventStartDate"
+            is-open="vm.isCalendarOpen"
+            datepicker-options="vm.calendarOptions"
+            ng-required="true"
+            close-text="Cerrar"/>
+          <span class="input-group-btn">
+            <button type="button"
+            class="btn btn-default"
+            ng-click="vm.openCalendar()">
+              <i class="glyphicon glyphicon-calendar"></i>
+            </button>
+          </span>
+        </div>
+        <!--<input class="form-control" type="datetime-local" value="{{vm.newEvent.when.start}}" />-->
+      </div>
+    </div>
+    <div class="form-group">
+      <label class="control-label col-sm-2" for="name">Hora de Inicio:</label>
+      <div class="col-sm-4">
+        <div class="input-group">
+          <div
+            uib-timepicker
+            ng-model="vm.eventStartDate"
+            ng-change="vm.changedTime()"
+            hour-step="vm.hstep"
+            minute-step="vm.mstep"
+            show-meridian="vm.ismeridian">
           </div>
-          <!--<input class="form-control" type="datetime-local" value="{{vm.newEvent.when.start}}" />-->
         </div>
       </div>
-      <div class="form-group">
-        <label class="control-label col-sm-2" for="name">Fecha de término:</label>
-        <div class="col-sm-5">
-          <div class="input-group">
-            <input type="text" class="form-control" value="{{ vm.newEvent.when.finish | amDateFormat:'dddd DD [de] MMMM YYYY, h:mm:ss a'}}">
-            <span class="input-group-btn">
-              <button class="btn btn-default" ng-click="vm.openCalendar()" type="button">Editar</button>
-            </span>
+    </div>
+    <div class="form-group">
+      <label class="control-label col-sm-2" for="name">Duración:</label>
+      <div class="col-sm-4">
+        <div class="input-group">
+          <div
+            uib-timepicker
+            ng-model="vm.eventDuration"
+            ng-change="vm.durationChanged()"
+            hour-step="vm.hstep"
+            minute-step="vm.mstep"
+            show-meridian="vm.durationIsMeridian">
           </div>
-          <!--<input class="form-control" type="datetime-local" value="{{vm.newEvent.when.finish}}" />-->
         </div>
       </div>
     </div>
-
-    <div class="form-page panel panel-default" ng-show="vm.formPageSelected==3">
-      <div class="form-group">
-        <label class="control-label col-sm-2" for="name">Dirección del Evento:</label>
-        <div class="col-sm-7">
-          <input type="name" class="form-control" id="name" placeholder="Ingrese la ubicación del evento" ng-model="vm.newEvent.where.address">
-        </div>
-        <div class="col-sm-3">
-         <button class="btn btn-default" ng-click="vm.toggleLocation()" type="button" ng-class="{active : vm.hasLocation}">
-           Añadir Geolocalización
-         </button>
-       </div>
+    <div class="form-group">
+      <label class="control-label col-sm-2" for="name">Horario del evento:</label>
+      <div class="col-sm-10">
+        Inicia: {{ vm.eventStartDate | amDateFormat:'dddd D [de] MMMM [de] YYYY [a las] h:mm a' }} <br/>
+        Termina: {{ vm.eventEndDate | amDateFormat:'dddd D [de] MMMM [de] YYYY [a las] h:mm a' }} <br/>
       </div>
-      <div class="row" ng-show="vm.hasLocation">
-        <div class="col-md-offset-2 col-md-10">
-          <leaflet
-          width="100%"
-          id="locationSelect"
-          lf-center="vm.center"
-          tiles="vm.tiles"
-          markers="vm.markers">
-          </leaflet>
+    </div>
+    <h4>3. Ubicación</h4>
+    <div class="form-group">
+      <label class="control-label col-sm-2" for="name">Lugar del Evento:</label>
+      <div class="col-sm-10">
+        <input type="name" class="form-control" id="name" placeholder="Nombre del lugar del evento (ej.: nombre del teatro)" ng-model="vm.newEvent.where.name">
+      </div>
+    </div>
+    <div class="form-group">
+      <label class="control-label col-sm-2" for="name">Dirección del Evento:</label>
+      <div class="col-sm-10">
+        <input type="name" class="form-control" id="name" placeholder="Escriba la dirección del evento o selecciónela en el mapa" ng-model="vm.newEvent.where.address">
+      </div>
+      <div class="col-sm-10 col-sm-offset-2">
+        <ui-gmap-google-map
+          center='vm.map.center'
+          zoom='vm.map.zoom'
+          events="vm.map.events">
+          <ui-gmap-marker
+            idKey="vm.cursor.id"
+            coords="vm.cursor.location">
+          </ui-gmap-marker>
+        </ui-gmap-google-map>
+      </div>
+    </div>
+    <div class="form-group">
+      <label class="control-label col-sm-2" for="name">Ubicación exacta:</label>
+      <div class="col-sm-10">
+        <div class="checkbox">
+          <label>
+            <input type="checkbox" ng-model="vm.exactLocation">
+              Al activar la ubicación exacta, los usuarios podrán abrir la ubicación
+              del evento en aplicaciones de mapas como Google Maps en sus dispositivos.
+              Activar esta opción solamente si el marcador del mapa de arriba está
+              ubicado exactamente en la posición del evento.
+            </input>
+          </label>
         </div>
       </div>
     </div>
-
-    <div class="form-page panel panel-default" ng-show="vm.formPageSelected==4">
-      <div class="form-group">
-        <label class="control-label col-sm-2" for="cost-text">Costo del evento:</label>
-        <div class="col-sm-2">
-          <input type="text" class="form-control" id="cost-text" placeholder="Texto" ng-model="vm.newCost.text">
-        </div>
-        <div class="col-sm-2">
+    <h4>4. Costo</h4>
+    <div class="form-group">
+      <label class="control-label col-sm-2" for="cost-text">Costo del evento:</label>
+      <div class="col-sm-2">
+        <input type="text" class="form-control" id="cost-text" placeholder="Texto" ng-model="vm.newCost.text">
+      </div>
+      <div class="col-sm-3">
+        <div class="input-group">
+          <span class="input-group-addon">$</span>
           <input type="number" class="form-control" id="cost-value" placeholder="Texto" ng-model="vm.newCost.value">
+          <span class="input-group-btn">
+            <button class="btn btn-default" ng-click="vm.addCost()" type="button">Añadir</button>
+          </span>
         </div>
-        <div class="col-sm-1">
-          <button class="btn btn-default" ng-click="vm.addCost()" type="button">+</button>
+      </div>
+      <div class="col-sm-5">
+        <div ng-show="vm.newEvent.cost == ''">
+          <b>Entrada Liberada</b><br/>Si el evento tiene costo, añádalo utilizando el formulario a la izquierda.
         </div>
-        <div class="col-sm-5">
-          <div ng-show="vm.newEvent.cost == ''">
-            <b>Entrada Liberada</b><br/>Si el evento tiene costo, añádalo utilizando el formulario a la izquierda.
-          </div>
-          <table class="col-md-12 table table-stripped table-condensed" ng-show="vm.newEvent.cost != ''">
-            <thead>
-              <tr>
-              <th>Ítem</th>
-              <th>Valor</th>
-              <th></th>
-              </tr>
-            </thead>
-            <tbody>
-              <tr ng-repeat="cost in vm.newEvent.cost">
-                <td>{{cost.text}}</td>
-                <td>$ {{cost.value}}</td>
-                <td>
-                  <button class="btn btn-default" ng-click="vm.removeCost(cost)" type="button">-</button>
-                </td>
-              </tr>
-            </tbody>
-          </table>
-        </div>
+        <table class="col-md-12 table table-stripped table-condensed" ng-show="vm.newEvent.cost != ''">
+          <thead>
+            <tr>
+            <th>Ítem</th>
+            <th>Valor</th>
+            <th></th>
+            </tr>
+          </thead>
+          <tbody>
+            <tr ng-repeat="cost in vm.newEvent.cost">
+              <td>{{cost.text}}</td>
+              <td>$ {{cost.value}}</td>
+              <td>
+                <button class="btn btn-default" ng-click="vm.removeCost(cost)" type="button">-</button>
+              </td>
+            </tr>
+          </tbody>
+        </table>
       </div>
     </div>
 
-    <div class="form-page panel panel-default" ng-show="vm.formPageSelected==5">
-      <p> Revise la información antes de confirmar el evento: </p>
-      <p> Nombre del Evento: {{ vm.newEvent.title }}</p>
-      <p> Categoría: {{ vm.newEvent.category }}</p>
-      <p ng-if="vm.newEvent.cost.length==0">
-        No se ha registrado ningún costo en el evento, por lo que aparecerá
-        como "Entrada Liberada". Si esto es incorrecto, por favor revise la
-        sección "Costo". </p>
-      <p ng-if="vm.newEvent.cost.length>0">
-        El evento cuenta con los siguientes valores:
-        <span ng-repeat="cost in vm.newEvent.cost">
-          {{ cost.text }}: ${{ cost.value }} -
-        </span>
-      </p>
-      <p> Ubicación del evento: {{ vm.newEvent.where.address }} </p>
-      <div class="form-group">
-        <div class="col-sm-offset-2 col-sm-10">
-          <button type="submit" class="btn btn-default">Registrar Evento</button>
-        </div>
+    <h4>5. Confirmación</h4>
+    <div class="form-group">
+      <div class="col-sm-offset-2 col-sm-10">
+        <div role="alert" ng-show="vm.formError" class="alert alert-danger">{{ vm.formError }}</div>
+        <button type="submit" class="btn btn-default">Registrar Evento</button>
       </div>
     </div>
+
   </form>
 </div>
