Add single event view.

--- a/app_client/home/home.view.html
+++ b/app_client/home/home.view.html
@@ -6,7 +6,7 @@
           <div class="home-header-content-inner">
             Con Astir, ya no te perderás ningún evento cultural.<br/>
             ¡Te invitamos a conocer y a ser parte de la cultura en tu ciudad!<br/>
-            <a href="#download" class="btn btn-outline btn-xl page-scroll">¡Descárgala gratis!</a>
+            <a href="/downloads/astir.apk" class="btn btn-outline btn-xl page-scroll">¡Descárgala gratis!</a>
           </div>
         </div>
       </div>
