--- a/app_client/index.html
+++ b/app_client/index.html
@@ -32,6 +32,7 @@
 
     <script src="/app.js"></script>
     <script src="/home/home.controller.js"></script>
+    <script src="/event-view/event-view.controller.js"></script>
     <script src="/login/login.controller.js"></script>
     <script src="/common/services/astir-data.service.js"></script>
     <script src="/common/services/authentication.service.js"></script>
