--- a/app_client/dashboard/events-list/events-list.view.html
+++ b/app_client/dashboard/events-list/events-list.view.html
@@ -10,7 +10,7 @@
       <th>Categoría</th>
       <th>Descripción</th>
       <th>Fecha</th>
-      <th colspan="2">Opciones</th>
+      <th colspan="3">Opciones</th>
     </tr>
   </thead>
   <tbody>
@@ -19,6 +19,11 @@
       <td class="col-md-1">{{event.category}}</td>
       <td>{{event.description}}</td>
       <td class="col-md-2">{{event.when.start}}</td>
+      <td class="col-md-1">
+        <button type="button" class="btn btn-default" ng-click="vm.viewEvent(event)">
+          <span class="glyphicon glyphicon-eye-open" aria-hidden="true"></span>
+        </button>
+      </td>
       <td class="col-md-1">
         <button type="button" class="btn btn-default">
           <span class="glyphicon glyphicon-edit" aria-hidden="true"></span>
