--- a/app_client/dashboard/events-add/events-add.view.html
+++ b/app_client/dashboard/events-add/events-add.view.html
@@ -1,6 +1,8 @@
-<div class="container app-container">
-  <h1>Añadir un nuevo evento</h1>
+<div class="container-fluid app-container">
   <dashboard-navigation></dashboard-navigation>
+  <div class="col-md-10">
+  <h1>Añadir un nuevo evento</h1>
+
   <h3>Ingrese datos del evento</h3>
   <form class="form-horizontal" ng-submit="vm.onSubmit()">
 
@@ -200,4 +202,5 @@
     </div>
 
   </form>
+  </div>
 </div>
