Add translating filters. Add users list controller and endpoint. Add self user data endpoint.

--- a/app_client/common/directives/dashboard-navigation/dashboard-navigation.view.html
+++ b/app_client/common/directives/dashboard-navigation/dashboard-navigation.view.html
@@ -30,7 +30,7 @@
     <strong>Mis datos</strong>
   </li>
   <a
-    href="#"
+    href="/#dashboard/userdata"
     class="list-group-item">
     Datos de Usuario
   </a>
