--- a/app_client/dashboard/users/users.view.html
+++ b/app_client/dashboard/users/users.view.html
@@ -1,36 +1,32 @@
 <div class="container-fluid app-container">
 <dashboard-navigation></dashboard-navigation>
 <div class="col-md-10">
-  <h1>Lista de eventos</h1>
+  <h1>Lista de Usuarios</h1>
   <div role="alert" ng-show="vm.formError" class="alert alert-danger">{{ vm.formError }}</div>
   <table class="table table-striped table-bordered events-list-table">
   <caption>Lista con todos los eventos registrados</caption>
   <thead>
     <tr>
-      <th>Título</th>
-      <th>Categoría</th>
-      <th>Descripción</th>
-      <th>Fecha</th>
-      <th colspan="3">Opciones</th>
+      <th>Nombre</th>
+      <th>Email</th>
+      <th>Rol</th>
+      <th>Creado</th>
+      <th colspan="2">Opciones</th>
     </tr>
   </thead>
   <tbody>
-    <tr ng-repeat="event in vm.events">
-      <td class="col-md-2">{{event.title}}</td>
-      <td class="col-md-1">{{event.category | categoryTranslate}}</td>
-      <td>{{event.description}}</td>
-      <td class="col-md-2">{{event.when.start | amDateFormat:'DD/MM/YYYY HH:mm' }}</td>
+    <tr ng-repeat="user in vm.users">
+      <td class="col-md-2">{{user.name}}</td>
+      <td class="col-md-2">{{user.email}}</td>
+      <td class="col-md-1">{{user.role | roleTranslate}}</td>
+      <td class="col-md-1">{{user.createdAt | amDateFormat:'DD/MM/YYYY HH:mm:ss' }}</td>
       <td class="col-md-1">
         <button type="button" class="btn btn-default" ng-click="vm.viewEvent(event)">
           <span class="glyphicon glyphicon-eye-open" aria-hidden="true"></span>
         </button>
-      </td>
-      <td class="col-md-1">
         <button type="button" class="btn btn-default">
           <span class="glyphicon glyphicon-edit" aria-hidden="true"></span>
         </button>
-      </td>
-      <td class="col-md-1">
         <button type="button" class="btn btn-danger" ng-click="vm.deleteEvent(event)">
           <span class="glyphicon glyphicon-trash" aria-hidden="true"></span>
         </button>
