--- a/app_client/index.html
+++ b/app_client/index.html
@@ -36,12 +36,17 @@
     <script src="/login/login.controller.js"></script>
     <script src="/common/services/astir-data.service.js"></script>
     <script src="/common/services/authentication.service.js"></script>
+    <script src="/common/services/users.service.js"></script>
+    <script src="/common/filters/category-translate.filter.js"></script>
+    <script src="/common/filters/role-translate.filter.js"></script>
     <script src="/common/directives/navigation/navigation.directive.js"></script>
     <script src="/common/directives/navigation/navigation.controller.js"></script>
     <script src="/common/directives/dashboard-navigation/dashboard-navigation.directive.js"></script>
     <script src="/common/directives/dashboard-navigation/dashboard-navigation.controller.js"></script>
     <script src="/dashboard/events-add/events-add.controller.js"></script>
     <script src="/dashboard/events-list/events-list.controller.js"></script>
+    <script src="/dashboard/users/users.controller.js"></script>
+    <script src="/dashboard/userdata/userdata.controller.js"></script>
     <!--
     <script src="http://cdn.leafletjs.com/leaflet-0.7.1/leaflet.js"></script>
     <script src="/lib/angular-leaflet-directive.min.js"></script>
