Add user profile update options.

--- a/app_client/common/directives/dashboard-navigation/dashboard-navigation.view.html
+++ b/app_client/common/directives/dashboard-navigation/dashboard-navigation.view.html
@@ -1,4 +1,4 @@
-<div class="col-md-2 list-group dashboard-navigation">
+<div class="col-md-2 list-group m-t-15">
   <li
     class="list-group-item"
     ng-show="navvm.userRole=='administrator'">
