User can create its cultural organization.

--- a/app_client/common/directives/dashboard-navigation/dashboard-navigation.view.html
+++ b/app_client/common/directives/dashboard-navigation/dashboard-navigation.view.html
@@ -35,7 +35,7 @@
     Datos de Usuario
   </a>
   <a
-    href="#"
+    href="/#dashboard/organization"
     class="list-group-item">
     Datos de Organización
   </a>
