--- a/app_client/index.html
+++ b/app_client/index.html
@@ -47,6 +47,7 @@
     <script src="/dashboard/events-list/events-list.controller.js"></script>
     <script src="/dashboard/users/users.controller.js"></script>
     <script src="/dashboard/userdata/userdata.controller.js"></script>
+    <script src="/dashboard/organization/organization.controller.js"></script>
     <!--
     <script src="http://cdn.leafletjs.com/leaflet-0.7.1/leaflet.js"></script>
     <script src="/lib/angular-leaflet-directive.min.js"></script>
